--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- FONTS -->
+
+    <script type="text/javascript" src="//fast.fonts.net/jsapi/aab89991-fe8a-4630-90db-4ffc76b03333.js"></script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
