--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <!-- FONTS -->
 
-    <script type="text/javascript" src="//fast.fonts.net/jsapi/aab89991-fe8a-4630-90db-4ffc76b03333.js"></script>
-  
-    
+    <!-- <script
+      type="text/javascript"
+      src="//fast.fonts.net/jsapi/aab89991-fe8a-4630-90db-4ffc76b03333.js"
+    ></script>
+
+    <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/aab89991-fe8a-4630-90db-4ffc76b03333.css"/>
+
+<style type="text/css">
+
+@import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=aab89991-fe8a-4630-90db-4ffc76b03333");
+    @font-face{
+        font-family:"Helvetica Neue LT W05_45 Light";
+        src:url("Fonts/f9c5199e-a996-4c08-9042-1eb845bb7495.woff2") format("woff2"),url("Fonts/2a34f1f8-d701-4949-b12d-133c1c2636eb.woff") format("woff");
+    }
+    @font-face{
+        font-family:"Helvetica Neue LT W05_97 Blk C";
+        src:url("Fonts/f2f49a5e-567d-4dfa-8152-c28c8f60c84e.woff2") format("woff2"),url("Fonts/ea7ce364-9de4-43c3-9b0b-7b26af453629.woff") format("woff");
+    } -->
+
+</style>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
